--- a/init.html
+++ b/init.html
@@ -73,11 +73,16 @@
     } from './js/hdwallet-core.js';
 
     import {
-      ensureCredentialWithChoice,   // 代替 “registerCredentialIfNeeded + 存在性判断”的组合
-      deriveKEK,                    // 保留
-      aesGcmEncryptStr,             // 保留
-      loadCredHex                   // 用来快速判断是否已有本域凭证缓存
+      ensureCredentialWithChoice,   // 发现已有/新建的统一入口
+      deriveKEK,
+      aesGcmEncryptStr,
+      loadCredHex
     } from './js/fido2.js';
+
+    // === Cloudflare Worker API 基础地址（务必替换为你的 Worker 域名） ===
+    const API_BASE = 'https://YOUR-WORKER-SUBDOMAIN.workers.dev'; // ← 替换
+    // 如 Worker 开启了 Bearer 校验，这里填密钥；否则留空：
+    const AUTH_KEY = ''; // 例如 's3cr3t-very-long'，留空则不发送 Authorization
 
     const $ = id => document.getElementById(id);
     let mnemonic = null;   // 仅在内存停留
@@ -94,17 +99,17 @@
       $('mnemo-wrap').style.display = 'block';
     }
 
-    // 统一保存到 D1 的函数（Functions 路由：/api/bundles）
+    // 统一保存到 D1（Worker 路由：POST /bundles）
     async function saveBundleToDB(bundle, { user_id='web-ui', note='' } = {}) {
-      const res = await fetch('/api/bundles', {
+      const headers = { 'content-type': 'application/json' };
+      if (AUTH_KEY) headers['authorization'] = `Bearer ${AUTH_KEY}`;
+      const res = await fetch(`${API_BASE}/bundles`, {
         method: 'POST',
-        headers: { 'content-type': 'application/json' },
+        headers,
         body: JSON.stringify({ user_id, note, bundle })
       });
-      const data = await res.json().catch(()=>({}));
-      if (!res.ok || !data?.ok) {
-        throw new Error(data?.error || `HTTP ${res.status}`);
-      }
+      const data = await res.json().catch(()=> ({}));
+      if (!res.ok || !data?.ok) throw new Error(data?.error || `HTTP ${res.status}`);
       return data; // { ok:true, bundle_id:'...' }
     }
 
@@ -143,20 +148,17 @@
       }catch(e){ $('pw-tip').innerHTML='<span class="err">备份失败：'+(e?.message||e)+'</span>'; console.error(e); }
     };
 
-    // ③ 注册/复用 FIDO2 凭证（先查有无；有则可选择复用或新建）
-    // ③ 注册/复用 FIDO2 凭证（自动发现已有；可提示是否新建）
-    // ② 注册/复用 FIDO2 凭证（不阻塞第三步）
+    // ③ 注册/复用 FIDO2 凭证
     $('btn-register').onclick = async () => {
       try {
-        // 先尝试复用已有凭证（如果浏览器 UI 直接弹出现有的，点选即可）
-        // 这里不再依赖 hasUsableCredential，直接调用 registerCredentialIfNeeded 让浏览器处理：
-        const res = await registerCredentialIfNeeded(); // 可能返回 { created:true } 或 { created:false, reused:true }
+        const res = await ensureCredentialWithChoice(); // 复用或新建（由浏览器 UI 处理）
         if (res?.created) {
           $('reg-tip').innerHTML = '<span class="ok">已注册新凭证。</span>';
         } else if (res?.reused) {
           $('reg-tip').innerHTML = '<span class="ok">已选择复用凭证（id: '+ (res.id?.slice(0,16)||'***') +'…）。</span>';
         } else {
-          $('reg-tip').innerHTML = '<span class="ok">已可使用本域凭证。</span>';
+          const id = loadCredHex();
+          $('reg-tip').innerHTML = '<span class="ok">已可使用本域凭证（id: '+ (id?.slice(0,16)||'***') +'…）。</span>';
         }
       } catch (e) {
         $('reg-tip').innerHTML = '<span class="err">注册/复用失败：' + (e?.message||e) + '</span>';
@@ -164,14 +166,15 @@
       }
     };
 
-    // ④ 自动确保有凭证 → PRF→HKDF 得 KEK → AES-GCM 加密各链 xprv/xpub → 直接写入数据库
-// ③ 直接调用 FIDO2 → 派生 KEK → 加密 → 写库
+    // ④ 直接调用 FIDO2 → 派生 KEK → 加密 → 写库（不强制预注册）
     $('btn-encrypt').onclick = async () => {
       try {
         if (!branches) { alert('请先生成助记词'); return; }
         $('encrypt-tip').textContent = '请触摸密钥以继续…';
 
-        // 直接 deriveKEK：如果没有凭证，浏览器通常会提示你选择/创建
+        // 尝试静默确保存在凭证（失败不拦截；deriveKEK 会弹系统 UI）
+        try { await ensureCredentialWithChoice({ preferExisting:true, silent:true }); } catch(_) {}
+
         const { kek, salt, rp_id, info, credential_id, toHex } = await deriveKEK();
 
         const enc = async s => s ? await aesGcmEncryptStr(kek, s) : null;
@@ -186,22 +189,14 @@
         };
 
         $('encrypt-tip').textContent = '正在写入数据库…';
-
-        // 同域相对路径；不要写 /public/api/…
-        const resp = await fetch('/api/bundles', {
-          method: 'POST',
-          headers: { 'content-type': 'application/json' },
-          body: JSON.stringify({ user_id: 'web-ui', note: '初始化保存（UI）', bundle })
-        });
-        const data = await resp.json().catch(()=> ({}));
-        if (!resp.ok || !data?.ok) throw new Error(data?.error || `HTTP ${resp.status}`);
+        const { bundle_id } = await saveBundleToDB(bundle, { user_id:'web-ui', note:'初始化保存（UI）' });
 
         // 清理敏感引用
         mnemonic = '';
         branches.ETH.xprv=null; branches.BTC.xprv_z=null; branches.EOS.xprv=null; branches.TRON.xprv=null;
 
         $('encrypt-tip').textContent = '';
-        $('final-tip').innerHTML = `<span class="ok">注册成功！bundle_id=${data.bundle_id}</span>`;
+        $('final-tip').innerHTML = `<span class="ok">注册成功！bundle_id=${bundle_id}</span>`;
       } catch (e) {
         $('encrypt-tip').textContent = '';
         $('final-tip').innerHTML = `<span class="err">写入失败：${e?.message||e}</span>`;
