--- a/init.html
+++ b/init.html
@@ -80,7 +80,7 @@
     } from './js/fido2.js';
 
     // === Cloudflare Worker API 基础地址（务必替换为你的 Worker 域名） ===
-    const API_BASE = 'https://YOUR-WORKER-SUBDOMAIN.workers.dev'; // ← 替换
+    const API_BASE = 'https://wallet.lucas-l-shang.workers.dev/'; // ← 替换
     // 如 Worker 开启了 Bearer 校验，这里填密钥；否则留空：
     const AUTH_KEY = ''; // 例如 's3cr3t-very-long'，留空则不发送 Authorization
 
