--- a/init.html
+++ b/init.html
@@ -1,201 +1,177 @@
 <!doctype html>
 <html lang="zh-CN">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>助记词初始化 + FIDO2 加密写库</title>
-<style>
-  body {
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,PingFang SC,"Microsoft YaHei",sans-serif;
-    background: #f9fafb;
-    margin: 40px auto;
-    max-width: 720px;
-    padding: 0 16px;
-    color: #111827;
-  }
-  h2 {
-    margin-bottom: 8px;
-  }
-  ol {
-    background: #fff;
-    border-radius: 12px;
-    padding: 16px 24px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.08);
-  }
-  button {
-    padding: 10px 18px;
-    border-radius: 10px;
-    border: none;
-    background: #111827;
-    color: #fff;
-    font-weight: 500;
-    cursor: pointer;
-    transition: background .2s;
-  }
-  button:hover:not(:disabled){ background:#1f2937 }
-  button[disabled]{opacity:.5;cursor:not-allowed}
-  input[type="password"]{
-    padding:8px;
-    border-radius:8px;
-    border:1px solid #cbd5e1;
-    width:100%;
-  }
-  .row{margin:18px 0}
-  .muted{color:#6b7280}
-  .grid{
-    display:grid;
-    grid-template-columns:repeat(3,1fr);
-    gap:10px;
-    margin-top:8px;
-  }
-  .cell{
-    border:1px solid #e5e7eb;
-    border-radius:10px;
-    padding:10px 12px;
-    background:#fafafa;
-    text-align:center;
-    font-size:15px;
-    box-shadow:inset 0 1px 2px rgba(0,0,0,0.05);
-  }
-  .badge{
-    display:inline-block;
-    background:#111827;
-    color:#fff;
-    border-radius:999px;
-    padding:2px 8px;
-    margin-right:6px;
-    font-size:12px;
-  }
-  .ok{color:#059669}
-  .err{color:#b91c1c}
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>助记词展示一次 + 分支导出 + FIDO2 加密（直接写库）</title>
+  <style>
+    :root{--ink:#0f172a;--muted:#64748b;--ok:#059669;--err:#b91c1c;--bg:#f8fafc;--card:#ffffff}
+    *{box-sizing:border-box}
+    body{font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,PingFang SC,Microsoft YaHei,sans-serif;margin:0;background:var(--bg);color:var(--ink)}
+    .wrap{max-width:980px;margin:32px auto;padding:0 16px}
+    h1{font-size:24px;margin:0 0 4px}
+    .sub{color:var(--muted);margin-bottom:20px}
+    .card{background:var(--card);border:1px solid #e5e7eb;border-radius:16px;padding:18px;margin:14px 0}
+    .row{margin:12px 0}
+    .muted{color:var(--muted)}
+    button{padding:10px 16px;border-radius:12px;border:0;background:var(--ink);color:#fff;cursor:pointer}
+    button[disabled]{opacity:.45;cursor:not-allowed}
+    input[type="password"]{padding:10px 12px;border-radius:10px;border:1px solid #cbd5e1;width:240px}
+    .grid{display:grid;grid-template-columns:repeat(3,minmax(0,1fr));gap:10px}
+    .cell{position:relative;border:1px solid #e5e7eb;border-radius:10px;padding:12px;background:#f9fafb;text-align:center}
+    .badge{position:absolute;left:8px;top:6px;display:inline-block;background:#111827;color:#fff;border-radius:999px;padding:1px 7px;font-size:12px}
+    .ok{color:var(--ok)} .err{color:var(--err)}
 
-  /* 助记词遮罩层 */
-  .mnemo-mask{
-    position:relative;
-    background:#f3f4f6;
-    border:2px dashed #d1d5db;
-    border-radius:12px;
-    padding:40px 0;
-    text-align:center;
-    color:#9ca3af;
-    font-size:15px;
-  }
-  .eye-btn{
-    background:none;
-    border:none;
-    cursor:pointer;
-    font-size:24px;
-    color:#6b7280;
-    transition:color .2s;
-  }
-  .eye-btn:hover{color:#111827}
-</style>
+    /* 助记词遮罩（点击显示，1 分钟后自动恢复） */
+    .mask{
+      position:absolute; inset:0; display:flex; align-items:center; justify-content:center;
+      background:repeating-linear-gradient(45deg, rgba(15,23,42,.07) 0 12px, rgba(15,23,42,.12) 12px 24px);
+      color:#111827b3; font-weight:600; letter-spacing:.5px; border-radius:10px; cursor:pointer;
+      transition:opacity .2s ease; user-select:none
+    }
+    .mask .eye{width:18px;height:18px;margin-right:6px;display:inline-block;border:2px solid #111827b3;border-radius:50%;position:relative}
+    .mask .eye:after{content:'';position:absolute;left:50%;top:50%;width:6px;height:6px;background:#111827b3;border-radius:50%;transform:translate(-50%,-50%)}
+    .notice{padding:10px 12px;border-radius:12px;background:#f1f5f9;border:1px dashed #cbd5e1;color:#0f172a;line-height:1.5}
+    code.small{background:#0f172a;color:#fff;padding:2px 6px;border-radius:6px}
+  </style>
 </head>
-
 <body>
-  <h2>初始化流程</h2>
-  <ol>
-    <li>生成助记词（默认<b>隐藏显示</b>，可点击查看 1 分钟）并在内存中导出各链分支。</li>
-    <li>（可选）输入密码生成<b>离线加密备份</b>（PBKDF2+AES-GCM）。</li>
-    <li>注册/复用 FIDO2 凭证。</li>
-    <li>使用凭证派生 KEK → 加密分支 → 写入数据库。</li>
-  </ol>
+  <div class="wrap">
+    <h1>钱包初始化</h1>
+    <div class="sub">一次性显示助记词 → 可选本地加密备份 → FIDO2 加密分支并写入数据库（不含助记词）</div>
 
-  <!-- Step 1 -->
-  <div class="row">
-    <button id="btn-gen">① 生成助记词</button>
-    <span id="gen-tip" class="muted">未生成</span>
-  </div>
+    <ol class="card" style="margin-top:0">
+      <li>生成助记词（<b>仅显示一次</b>）并在内存中导出各链分支（xprv/xpub 或 z*）。</li>
+      <li>（可选）输入强密码，生成<b>离线加密备份</b>（PBKDF2+AES-GCM，JSON 文件）。</li>
+      <li>注册/复用 FIDO2 凭证（若已存在可选择复用或新建）。</li>
+      <li>使用凭证派生 KEK → 加密分支 → <b>直接写入数据库</b>，成功后给出 bundle_id。</li>
+    </ol>
 
-  <div id="mnemo-wrap" class="row" style="display:none">
-    <div id="mnemo-mask" class="mnemo-mask">
-      <p>助记词已生成，点击下方 👁️ 查看（显示 60 秒后自动隐藏）</p>
-      <button id="btn-show" class="eye-btn" title="点击查看助记词">👁️</button>
+    <!-- Step 1 -->
+    <div class="card">
+      <div class="row">
+        <button id="btn-gen">① 生成助记词（显示一次）</button>
+        <span id="gen-tip" class="muted">未生成</span>
+      </div>
+      <div id="mnemo-wrap" class="row" style="display:none">
+        <div class="notice" style="margin-bottom:10px">
+          出于安全考虑，助记词默认被遮挡。点击任意单元的<span class="eye" style="vertical-align:-2px;border-color:#0f172a;"></span>以显示，
+          可见时间 <b>60 秒</b>，随后自动再次遮挡。请立即抄写并妥善保管。
+        </div>
+        <div class="grid" id="mnemo-grid"></div>
+      </div>
     </div>
-    <div class="grid" id="mnemo-grid" style="display:none"></div>
-    <div class="muted">请立即抄写保存。页面不会永久保留助记词；私钥不会显示。</div>
-  </div>
 
-  <!-- Step 2 -->
-  <div class="row">
-    <label><input id="want-backup" type="checkbox"> 生成<b>离线加密备份</b>（JSON 文件）</label>
-  </div>
-  <div id="backup-area" class="row" style="display:none">
-    <div class="muted">密码需 ≥8 且包含字母+数字+特殊字符。</div>
-    <div style="display:flex;gap:8px;margin-top:8px">
-      <input id="pw1" type="password" placeholder="备份密码">
-      <input id="pw2" type="password" placeholder="再次输入">
-      <button id="btn-backup" disabled>生成并下载</button>
+    <!-- Step 2 -->
+    <div class="card">
+      <div class="row">
+        <label><input id="want-backup" type="checkbox"> 我要生成<b>离线加密备份</b>（纯 JSON 文件）</label>
+      </div>
+      <div id="backup-area" class="row" style="display:none">
+        <div class="muted">密码需 ≥8，且必须包含：字母 + 数字 + 特殊字符。</div>
+        <div style="display:flex;gap:8px;margin-top:8px;flex-wrap:wrap">
+          <input id="pw1" type="password" placeholder="备份密码">
+          <input id="pw2" type="password" placeholder="再次输入">
+          <button id="btn-backup" disabled>生成并下载备份 JSON</button>
+        </div>
+        <div id="pw-tip" class="muted"></div>
+      </div>
     </div>
-    <div id="pw-tip" class="muted"></div>
-  </div>
 
-  <!-- Step 3 -->
-  <div class="row">
-    <button id="btn-register">② 注册/复用 FIDO2 凭证</button>
-    <span id="reg-tip" class="muted"></span>
-  </div>
+    <!-- Step 3 -->
+    <div class="card">
+      <div class="row" style="display:flex;align-items:center;gap:12px;flex-wrap:wrap">
+        <button id="btn-register">② 注册/复用 FIDO2 凭证</button>
+        <span id="reg-tip" class="muted"></span>
+      </div>
+      <div class="notice">
+        不阻塞下一步：即使不先点本按钮，下一步在派生 KEK 时也会自动引导选择/创建凭证。
+      </div>
+    </div>
 
-  <!-- Step 4 -->
-  <div class="row">
-    <button id="btn-encrypt" disabled>③ 加密分支并写入数据库</button>
-    <span id="encrypt-tip" class="muted"></span>
-  </div>
+    <!-- Step 4 -->
+    <div class="card">
+      <div class="row" style="display:flex;align-items:center;gap:12px;flex-wrap:wrap">
+        <button id="btn-encrypt" disabled>③ 加密分支并写入数据库</button>
+        <span id="encrypt-tip" class="muted"></span>
+      </div>
+      <div id="final-tip" class="row muted"></div>
+    </div>
 
-  <div id="final-tip" class="row muted"></div>
+    <div class="muted" style="text-align:center;margin-top:16px">© 本页不保存助记词；最终写库 JSON 不包含助记词。</div>
+  </div>
 
   <script type="module">
+    /***** 配置你的 Worker API 基址（必须 https） *****/
+    const API_BASE = 'https://wallet.lucas-l-shang.workers.dev';  // ← 改成你的 workers.dev 或自定义域
+
     import {
       genMnemonic, splitWords, mnemonicToSeed, exportBranches,
       createPasswordBackupBlob, validatePasswordStrict
     } from './js/hdwallet-core.js';
 
     import {
-      registerCredentialIfNeeded,
-      deriveKEK, aesGcmEncryptStr
+      ensureCredentialWithChoice,   // ← 使用这个：有则复用、无则新建（可提示）
+      deriveKEK,                    // PRF + HKDF → AES-GCM KEK
+      aesGcmEncryptStr,             // 加密 xprv/xpub
+      loadCredHex                   // 显示已缓存的凭证 id（可选）
     } from './js/fido2.js';
 
     const $ = id => document.getElementById(id);
-    let mnemonic = null;
-    let branches = null;
-    let hideTimer = null;
 
+    let mnemonic = null;   // 仅在内存停留
+    let branches = null;   // {ETH:{...}, BTC:{...}, EOS:{...}, TRON:{...}}
+
+    /** 保存到 D1（Worker 路由：POST /bundles） */
+    async function saveBundleToDB(bundle, { user_id='web-ui', note='' } = {}) {
+      const res = await fetch(API_BASE + '/bundles', {
+        method: 'POST',
+        headers: { 'content-type': 'application/json' },
+        body: JSON.stringify({ user_id, note, bundle })
+      });
+      const data = await res.json().catch(()=>({}));
+      if (!res.ok || !data?.ok) throw new Error(data?.error || `HTTP ${res.status}`);
+      return data; // { ok:true, bundle_id:'...' }
+    }
+
+    /** 渲染助记词（默认遮挡）+ 点击显示 60s */
     function renderMnemonicOnce(m){
       const words = splitWords(m);
       const grid = $('mnemo-grid'); grid.innerHTML = '';
       words.forEach((w,i)=>{
-        const d = document.createElement('div'); d.className='cell';
-        d.innerHTML = `<span class="badge">${i+1}</span>${w}`;
-        grid.appendChild(d);
+        const cell = document.createElement('div'); cell.className='cell';
+        cell.innerHTML = `<span class="badge">${i+1}</span><span class="word">${w}</span>`;
+        const mask = document.createElement('div');
+        mask.className = 'mask';
+        mask.innerHTML = `<span class="eye"></span>点击显示 60 秒`;
+        let timer = null;
+        const show = ()=>{
+          mask.style.opacity = '0'; mask.style.pointerEvents='none';
+          clearTimeout(timer);
+          timer = setTimeout(hide, 60_000); // 60s auto-hide
+        };
+        const hide = ()=>{
+          mask.style.opacity = '1'; mask.style.pointerEvents='auto';
+        };
+        mask.addEventListener('click', show);
+        cell.appendChild(mask);
+        grid.appendChild(cell);
       });
       $('mnemo-wrap').style.display = 'block';
-      $('mnemo-mask').style.display = 'block';
-      $('mnemo-grid').style.display = 'none';
     }
 
-    // 助记词显示与隐藏逻辑
-    function showMnemonicTemporarily(){
-      $('mnemo-mask').style.display = 'none';
-      $('mnemo-grid').style.display = 'grid';
-      if (hideTimer) clearTimeout(hideTimer);
-      hideTimer = setTimeout(()=>{
-        $('mnemo-grid').style.display = 'none';
-        $('mnemo-mask').style.display = 'block';
-      }, 60000); // 60 秒后自动隐藏
-    }
-
-    $('btn-show').onclick = showMnemonicTemporarily;
-
+    /** Step 1：生成助记词 & 内存导出分支 */
     $('btn-gen').onclick = ()=>{
-      mnemonic = genMnemonic(128);
+      mnemonic = genMnemonic(128);           // 12 词
       renderMnemonicOnce(mnemonic);
       const seed = mnemonicToSeed(mnemonic, '');
-      branches = exportBranches(seed);
-      $('gen-tip').textContent = '助记词已生成（默认隐藏），分支已导出。';
+      branches = exportBranches(seed);       // 内存得到 xprv/xpub（BTC 为 z*）
+      $('gen-tip').textContent = '助记词已生成并显示一次；分支已在内存导出。';
       $('btn-encrypt').disabled = false;
       $('final-tip').textContent = '';
     };
 
+    /** Step 2：离线备份（强密码） */
     $('want-backup').onchange = e=>{
       $('backup-area').style.display = e.target.checked ? 'block' : 'none';
       $('btn-backup').disabled = !e.target.checked;
@@ -215,31 +191,38 @@
         const url = URL.createObjectURL(blob);
         const a = document.createElement('a'); a.href=url; a.download='mnemonic_backup.enc.json'; a.click();
         setTimeout(()=>URL.revokeObjectURL(url), 3000);
-        $('pw-tip').innerHTML = '<span class="ok">已生成并下载。</span>';
-      }catch(e){ $('pw-tip').innerHTML='<span class="err">失败：'+(e?.message||e)+'</span>'; }
+        $('pw-tip').innerHTML = '<span class="ok">已生成并下载离线备份。</span>';
+      }catch(e){ $('pw-tip').innerHTML='<span class="err">备份失败：'+(e?.message||e)+'</span>'; console.error(e); }
     };
 
+    /** Step 3：注册/复用 FIDO2（不阻塞下一步） */
     $('btn-register').onclick = async () => {
       try {
-        const res = await registerCredentialIfNeeded();
-        if (res?.created) $('reg-tip').innerHTML = '<span class="ok">已注册新凭证。</span>';
-        else $('reg-tip').innerHTML = '<span class="ok">已复用凭证。</span>';
+        const res = await ensureCredentialWithChoice();
+        if (res?.created) {
+          $('reg-tip').innerHTML = '<span class="ok">已注册新凭证。</span>';
+        } else {
+          $('reg-tip').innerHTML = `<span class="ok">已选择凭证（id: ${res.id_hex.slice(0,16)}…）。</span>`;
+        }
       } catch (e) {
-        $('reg-tip').innerHTML = '<span class="err">失败：' + (e?.message||e) + '</span>';
+        $('reg-tip').innerHTML = '<span class="err">注册/复用失败：' + (e?.message||e) + '</span>';
+        console.error(e);
       }
     };
 
+    /** Step 4：PRF→HKDF 得 KEK → AES-GCM 加密 → 直接写库 */
     $('btn-encrypt').onclick = async () => {
       try {
-        if (!branches) { alert('请先生成助记词'); return; }
-        $('encrypt-tip').textContent = '请触摸密钥以继续…';
+        if (!branches){ alert('请先生成助记词'); return; }
+        $('encrypt-tip').textContent='请触摸密钥以继续…';
 
-        const { kek, salt, rp_id, info, credential_id, toHex } = await deriveKEK();
+        // 自动注册兜底：没有凭证时会引导创建
+        const { kek, salt, rp_id, info, credential_id, toHex } = await deriveKEK({ autoRegister:true });
+
         const enc = async s => s ? await aesGcmEncryptStr(kek, s) : null;
-
         const bundle = {
-          KEKInfo: { rp_id, info, salt: toHex(salt), credential_id },
-          chains: {
+          KEKInfo:{ rp_id, info, salt: toHex(salt), credential_id },
+          chains:{
             ETH:  { path: branches.ETH.path,  PubEnc: await enc(branches.ETH.xpub),   PrivEnc: await enc(branches.ETH.xprv) },
             BTC:  { path: branches.BTC.path,  PubEnc: await enc(branches.BTC.xpub_z), PrivEnc: await enc(branches.BTC.xprv_z) },
             EOS:  { path: branches.EOS.path,  PubEnc: await enc(branches.EOS.xpub),   PrivEnc: await enc(branches.EOS.xprv) },
@@ -247,25 +230,30 @@
           }
         };
 
-        $('encrypt-tip').textContent = '正在写入数据库…';
+        $('encrypt-tip').textContent='正在写入数据库…';
+        const ret = await saveBundleToDB(bundle, { user_id:'web-ui', note:'初始化保存（UI）' });
 
-        const resp = await fetch('https://wallet.lucas-l-shang.workers.dev/bundles', {
-          method: 'POST',
-          headers: { 'content-type': 'application/json' },
-          body: JSON.stringify({ user_id: 'web-ui', note: 'UI init save', bundle })
-        });
-        const data = await resp.json().catch(()=> ({}));
-        if (!resp.ok || !data?.ok) throw new Error(data?.error || `HTTP ${resp.status}`);
-
+        // 安全：清除敏感引用
         mnemonic = '';
-        branches = null;
-        $('encrypt-tip').textContent = '';
-        $('final-tip').innerHTML = `<span class="ok">注册成功！bundle_id=${data.bundle_id}</span>`;
+        branches.ETH.xprv=null; branches.BTC.xprv_z=null; branches.EOS.xprv=null; branches.TRON.xprv=null;
+
+        $('encrypt-tip').textContent='';
+        $('final-tip').innerHTML = `<span class="ok">注册成功！<br/>bundle_id = <code class="small">${ret.bundle_id}</code></span>`;
       } catch (e) {
-        $('encrypt-tip').textContent = '';
+        $('encrypt-tip').textContent='';
         $('final-tip').innerHTML = `<span class="err">写入失败：${e?.message||e}</span>`;
+        console.error(e);
       }
     };
+
+    // 如果本地已有凭证缓存，给点提示（纯 UI 强化，可删）
+    const cached = loadCredHex?.();
+    if (cached) {
+      const el = document.createElement('div');
+      el.className = 'wrap'; el.style.maxWidth='980px'; el.style.padding='0 16px';
+      el.innerHTML = `<div class="muted" style="text-align:center">检测到本域凭证：<code class="small">${cached.slice(0,16)}…</code></div>`;
+      document.body.appendChild(el);
+    }
   </script>
 </body>
 </html>
